<resources>
    <string name="app_name">h.a.</string>
    <string name="manage_button">Manage application options</string>
    <string name="bottom_navigation_questions">Questions</string>
    <string name="bottom_navigation_statistics">Statistics</string>
    <string name="bottom_navigation_settings">Settings</string>
    <string name="add_a_new_question">Add a new question</string>
    <string name="question_dialog_hint">Question</string>
    <string name="expand_bottom_drawer_hint">Expand bottom drawer</string>
    <string name="ask_question_yes">Yes</string>
    <string name="ask_question_n">No</string>
    <string name="ask_question_yes_no_placeholder">[Did you do it?]</string>
</resources>