<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="1dp"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="false"
    app:behavior_peekHeight="32dp">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_expand_drawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_gravity="bottom|center"
        android:contentDescription="@string/expand_bottom_drawer_hint"
        android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
        app:backgroundTint="@android:color/transparent"
        app:elevation="0dp"
        app:maxImageSize="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top|center">

        <Button
            android:id="@+id/navigate_questions"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/bottom_navigation_questions"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:icon="@drawable/ic_baseline_question_answer_24" />

        <Button
            android:id="@+id/navigate_stats"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/bottom_navigation_statistics"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:icon="@drawable/ic_baseline_bar_chart_24" />


        <Button
            android:id="@+id/navigate_settings"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/bottom_navigation_settings"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:icon="@drawable/ic_baseline_app_settings_alt_24" />
    </LinearLayout>


</LinearLayout>